--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>git</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="jquery-3.1.1.js"></script>
